--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
       - name: Install deps
-        run: npm ci
+        run: pnpm ci
       - name: Compile
         run: npx hardhat compile
       - name: Test
