--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
-      - run: npm ci && npx hardhat compile
+      - run: pnpm ci && npx hardhat compile
       - name: Package ABIs
         run: |
           mkdir -p dist/abis
